tests/cases/syntax/error/variables/string-as-variable.soccam
;; string-as-variable.soccam
;; Tests: 
(module string-as-variable soccam
  (decl ([x int])
    (:= "x" 1))
)
